--- a/src/scss/table.scss
+++ b/src/scss/table.scss
@@ -22,6 +22,7 @@
     border: 1px solid $border-color;
     background: #f8f9fa;
     border-top: none;
+    position: relative;
   }
 
   .row-data {
@@ -39,6 +40,7 @@
     border-top: 0;
     border-left: 0;
     height: 100%;
+    position: relative;
   }
 
   .cell {
@@ -52,11 +54,42 @@
     color: #111;
     white-space: nowrap;
     outline: none;
+  
 
     &.selected {
       border: none;
-      outline: 2px solid #3c74ff;
+      outline: 2px solid $primary-color;
       z-index: 2;
+    }
+  }
+
+  .col-resize, .row-resize {
+    position: absolute;
+    right: 0;
+    opacity: 0;
+    bottom: 0;
+    background: $primary-color;
+
+    &:hover {
+      opacity: 1;
+    }
+  }
+
+  .col-resize {
+    top: 0;
+    width: 3px;
+    
+    &:hover {
+      cursor: col-resize;
+    }
+  }
+
+  .row-resize {
+    left: 0;
+    height: 3px;
+
+    &:hover {
+      cursor: row-resize;
     }
   }
 }
